kustomize/monitoring/my-ingress.yaml
#
# This file was made by me, not from the crunchy repos
# And will not be included in the kustomize.
# The purpose is to access grafana dashboard via nginx-ingress
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
  name: mon-pgo-ingress
  namespace: postgres-operator
spec:
  # How to get class name?
  # Depend on setup of ingress controller
  #   kubectl get ingressClass --all-namespaces
  ingressClassName: traefik
  # ingressClassName: nginx
  rules:
    - host: mon-pgo.mxn0.store
      http:
        paths:
          # note all services must be alive, otherwise might affect another
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crunchy-grafana
                port:
                  number: 3000
